# knight_hero_server

./: .env.example  .gitignore  MIGRATION_GUIDE.md  README.md  pyproject.toml  run_tests.py
common/: __init__.py  utils.py
common/base/: __init__.py  base_game_service.py  base_handler.py
common/config/: __init__.py  base_config.py  config_gen.py  config_loader.py  excel_to_json.py
common/database/: __init__.py  base_repository.py  concurrent_operations.py  distributed_lock.py  models.py  mongo_client.py  operation_logger.py  persistence_service.py  redis_cache.py  repository_gen.py
common/database/cache/: __init__.py  cache_manager.py
common/database/concurrent/: __init__.py  atomic_operation.py  operation_type.py
common/database/core/: __init__.py  config.py  mongo_client.py  redis_client.py
common/database/generator/: __init__.py  repository_generator.py  repository_registry.py
common/database/models/: __init__.py  base_document.py  guild_model.py  item_model.py  player_model.py
common/database/optimizations/: __init__.py
common/database/repositories/: __init__.py  guild_repository.py  item_repository.py  player_repository.py
common/database/repository/: __init__.py  base_repository.py  enhanced_base_repository.py  repository_manager.py
common/database/services/: __init__.py  persistence_service.py
common/database/utils/: __init__.py  logger.py  lua_scripts.py
common/debug/: __init__.py
common/exceptions/: __init__.py
common/grpc/: __init__.py  decorators.py  grpc_client.py  grpc_pool.py  grpc_service.py  service_registry.py
common/grpc/protos/: service.proto  service_pb2.py  service_pb2_grpc.py
common/health/: __init__.py
common/ioc/: __init__.py  base_service.py  container.py  decorators.py  exceptions.py  service_scanner.py
common/logger/: __init__.py  async_logger.py  config.py  formatters.py  handlers.py
common/performance/: __init__.py
common/protocol/: __init__.py  base.py  base_message.proto  base_message_pb2.py  proto_gen.py  protocol_utils.py
common/protocol/core/: __init__.py  base_request.py  base_response.py  decorators.py  message_meta.py  message_type.py
common/protocol/crypto/: __init__.py  aes_cipher.py  crypto_config.py  key_manager.py
common/protocol/encoding/: __init__.py  buffer_manager.py  decoder.py  encoder.py  message_pool.py
common/protocol/generator/: __init__.py  message_scanner.py  proto_gen.py  template.py
common/protocol/messages/: __init__.py
common/protocol/utils/: __init__.py  checksum.py  compression.py  serializer.py
common/utils/: __init__.py  decorators.py  error_handler.py  serialization.py  validators.py
doc/: CONFIG_SYSTEM.md  DATABASE_REFACTORING_GUIDE.md  README.md  chat_service_implementation.md  database_implementation.md  gateway_implementation.md  grpc_implementation.md  logger_system.md  routing_system_implementation.md
docs/: IoC_Usage_Guide.md  coding_standards.md  quick_start.md
examples/: config_demo.py  database_usage.py  fight_usage.py  grpc_example.py  logger_usage.py  logic_service_demo.py  service_layer_example.py
excel/: item.xlsx  npc.xlsx  skill.xlsx
json/: item.json  npc.json  server_config.json  skill.json
launcher/: README.md  __init__.py  health_check.py  launcher.py  nginx_gen.py  server.py  supervisor_gen.py
scripts/: README.md  generate_repositories.py  scaffold_generator.py
services/: __init__.py
services/chat/: __init__.py  main.py  models.py
services/chat/channels/: __init__.py  channel_manager.py
services/chat/filters/: __init__.py  word_filter.py
services/chat/handlers/: __init__.py  chat_handler.py
services/chat/services/: __init__.py  message_pusher.py  message_service.py
services/fight/: __init__.py  main.py
services/fight/core/: __init__.py  battle_engine.py  battle_unit.py
services/fight/handlers/: __init__.py  battle_handler.py
services/fight/utils/: __init__.py  object_pool.py
services/gateway/: __init__.py  chat_integration.py  connection.py  connection_manager.py  handlers.py  main.py  message_dispatcher.py  message_queue.py  router.py  session.py  session_manager.py
services/logic/: __init__.py  main.py  main_ioc.py
services/logic/handlers/: __init__.py  base_handler.py  player_handler.py  player_handler_ioc.py
services/logic/ranking/: __init__.py  rank_service.py
services/logic/repositories/: __init__.py  player_repository.py
test/: README.md  __init__.py  conftest.py  framework_config.py  grpc_framework_validation.py  test_basic.py  test_chat_integration.py  test_chat_service.py  test_chat_unit_integration.py  test_config.py  test_database.py  test_fight.py  test_gateway.py  test_gateway_performance.py  test_generated_repositories.py  test_grpc.py  test_grpc_framework.py  test_ioc_framework.py  test_ioc_integration.py  test_launcher.py  test_logger.py  test_logic_basic.py  test_logic_service.py  test_protocol.py  test_routing_system.py  test_simple_ioc.py
test/examples/: config_gen_example.py  config_loader_example.py  excel_to_json_example.py  refactoring_demo.py
test/integration/: __init__.py  test_gateway.py
test/load/: __init__.py  locustfile.py
test/unit/: __init__.py  test_grpc_registry.py  test_protocol.py  test_repository_access.py  test_utils.py
test/utils/: __init__.py  mock_client.py
(+20 files in other folders)
