[tool.poetry]
name = "knight-hero-server"
version = "0.1.0"
description = "骑士英雄游戏服务器 - Knight Hero Game Server"
authors = ["lx"]
readme = "README.md"
packages = [{include = "common"}, {include = "services"}, {include = "launcher"}]

[tool.poetry.dependencies]
python = "^3.12.0"
uvloop = "^0.19.0"
fastapi = "^0.104.1"
websockets = "^12.0"
redis = "^5.0.1"
motor = "^3.3.2"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
protobuf = "^4.25.1"
pydantic = "^2.5.2"
orjson = "^3.9.10"
supervisor = "^4.2.5"
beanie = "^1.30.0"
cryptography = "^45.0.4"
aiofiles = "^24.1.0"
pandas = "^2.3.0"
croniter = "^6.0.0"
msgpack = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# pytest 配置
asyncio_mode = "auto"
testpaths = ["test"]

[tool.black]
# black 代码格式化配置
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
# isort 导入排序配置
profile = "black"
multi_line_output = 3
line_length = 88